add borders to all boxes in grid. Have grid boxes change depending on amount of grids

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 }
 
 .grid {
+    height: 1000px;
+    width: 1000px;
     display: flex;
+    flex-direction: column;
     border: 1px solid black;
 }
