add option to randomize the grid at the start or change the opacity of the grid on hover

--- a/style.css
+++ b/style.css
@@ -16,3 +16,15 @@ body {
     flex-direction: column;
     border: 1px solid black;
 }
+
+.options {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.extra {
+    display: flex;
+    justify-content: center;
+    gap: 2px;
+}
